this commit for adding CSS style for index.html file

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my second git add!</title>
+
+    <link rel="stylesheet" href="style/mian.css">
+
 </head>
 <body>
-    <div>
-        <h1>Git is very power full VCS</h1>
+    <div class="main_div">
+        <h1 class="h1_element">Git is very power full VCS</h1>
         <p>Git Source contol, Github and Hosting!</p>
-        <h3>Why version contorl system is needed.</h3>
-        <ul>
+        <img src="images/bird/bird_photo.jpg" alt="">
+        <h3 class="h3_element">Why version contorl system is needed.</h3>
+        <ul class="list_me">
             <li>Collabarotion</li>
             <li>Storing Version</li>
-            <li>Restoring Previous Version</li>
+            <li id="cool">Restoring Previous Version</li>
             <li>Backup</li>
         </ul>
     </div>
