--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
             <li>Backup</li>
         </ul>
     </div>
+
+    <div>
+        <h2>think about git and Github</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aliquid quisquam ullam repellat, sit quaerat!</p>
+        <ol>
+            <li>git --Version</li>
+            <li>Change Directory</li>
+            <li>Git config change</li>
+            <li>Git remote</li>
+        </ol>
+    </div>
 </body>
 </html>
